Add ability to block QUIC when decrypting TLS
This can force apps to fallback to TLS, whose decryption is supported.

https://www.ietf.org/archive/id/draft-ietf-quic-applicability-09.html#section-2

Closes #213

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -53,6 +53,13 @@
             app:defaultValue="false" />
 
         <SwitchPreference
+            app:key="block_quic"
+            app:title="@string/block_quick"
+            app:iconSpaceReserved="false"
+            app:summary="@string/block_quick_summary"
+            app:defaultValue="false" />
+
+        <SwitchPreference
             app:key="full_payload"
             app:title="@string/full_payload"
             app:iconSpaceReserved="false"
