Improve mitm addon setup wizard help messages

--- a/app/src/main/res/navigation/mitm_wizard_graph.xml
+++ b/app/src/main/res/navigation/mitm_wizard_graph.xml
@@ -3,7 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mitm_wizard_graph"
-    app:startDestination="@id/installMitmApp">
+    app:startDestination="@id/intro">
+
+    <fragment
+        android:id="@+id/intro"
+        android:name="com.emanuelef.remote_capture.fragments.mitmwizard.Intro"
+        tools:layout="@layout/fragment_mitm_wizard" >
+        <action
+            android:id="@+id/navto_install_addon"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_right"
+            app:destination="@id/installMitmApp" />
+    </fragment>
 
     <fragment
         android:id="@+id/installMitmApp"
@@ -34,5 +47,18 @@
     <fragment
         android:id="@+id/InstallCertificate"
         android:name="com.emanuelef.remote_capture.fragments.mitmwizard.InstallCertificate"
+        tools:layout="@layout/fragment_mitm_wizard">
+        <action
+            android:id="@+id/navto_done"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_right"
+            app:destination="@id/Done" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/Done"
+        android:name="com.emanuelef.remote_capture.fragments.mitmwizard.Done"
         tools:layout="@layout/fragment_mitm_wizard" />
 </navigation>
