--- a/app/src/main/res/menu/about_menu.xml
+++ b/app/src/main/res/menu/about_menu.xml
@@ -8,4 +8,9 @@
         android:title="@string/paid_features"
         android:orderInCategory="10"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/on_boarding"
+        android:title="@string/features_onboarding"
+        android:orderInCategory="20"
+        app:showAsAction="never" />
 </menu>
