--- a/app/src/main/res/values-night-v8/colors.xml
+++ b/app/src/main/res/values-night-v8/colors.xml
@@ -6,7 +6,8 @@
     <color name="colorPrimary">#6C52AB</color>
     <color name="colorPrimaryDark">#24144D</color>
     <color name="colorActionBar">#121212</color>
-    <color name="colorAccent">@color/design_default_color_secondary</color>
+    <color name="colorAccent">#03DAC6</color>
+    <color name="colorAccentLight">#BCEBE7</color>
     <color name="colorBackgroundGray">#1CFFFFFF</color>
     <color name="navViewBackground">#FF202020</color>
     <color name="backgroundColor">@color/background_material_dark</color>
