Add memory usage stats in the UI

--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -22,14 +22,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/bytes_sent" />
         <TextView
             android:id="@+id/bytes_sent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -40,14 +40,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/bytes_rcvd" />
         <TextView
             android:id="@+id/bytes_rcvd"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -58,14 +58,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/packets_sent" />
         <TextView
             android:id="@+id/packets_sent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -76,14 +76,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/packets_rcvd" />
         <TextView
             android:id="@+id/packets_rcvd"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -95,14 +95,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/packets_dropped" />
         <TextView
             android:id="@+id/pkts_dropped"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -114,14 +114,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/active_connections" />
         <TextView
             android:id="@+id/active_connections"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -133,14 +133,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/dropped_connections" />
         <TextView
             android:id="@+id/dropped_connections"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -151,14 +151,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/tot_connections" />
         <TextView
             android:id="@+id/tot_connections"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -170,14 +170,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/dns_server" />
         <TextView
             android:id="@+id/dns_server"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -189,14 +189,69 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/dns_queries" />
         <TextView
             android:id="@+id/dns_queries"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
+            android:textIsSelectable="true" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="4dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:textStyle="bold"
+            android:text="@string/heap_usage" />
+        <TextView
+            android:id="@+id/heap_usage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:textIsSelectable="true" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:textStyle="bold"
+            android:text="@string/memory_usage" />
+        <TextView
+            android:id="@+id/mem_usage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:textIsSelectable="true" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:textStyle="bold"
+            android:text="@string/low_memory" />
+        <TextView
+            android:id="@+id/low_mem_detected"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 
@@ -208,33 +263,14 @@ android:layout_height="fill_parent">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="0.50"
             android:textStyle="bold"
             android:text="@string/open_sockets" />
         <TextView
             android:id="@+id/open_sockets"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.40"
-            android:textIsSelectable="true" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="4dp"
-        android:id="@+id/max_fd_row">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.60"
-            android:textStyle="bold"
-            android:text="@string/max_file_descriptor" />
-        <TextView
-            android:id="@+id/max_fd"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.40"
+            android:layout_weight="0.50"
             android:textIsSelectable="true" />
     </TableRow>
 </TableLayout>
