Add ability to exclude apps from the VPN
Closes #229

--- a/app/src/main/res/layout/apps_stats.xml
+++ b/app/src/main/res/layout/apps_stats.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <com.emanuelef.remote_capture.views.EmptyRecyclerView
-        android:id="@+id/apps_stats_view"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
