--- a/app/src/main/res/layout/app_installed_item.xml
+++ b/app/src/main/res/layout/app_installed_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -17,21 +18,20 @@
             android:layout_height="36dp"/>
 
         <LinearLayout
-            android:layout_marginLeft="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginStart="10dp">
             <TextView
-                android:id="@+id/list_app_name"
+                android:id="@+id/app_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="14sp"
-                android:text="App Name"/>
+                tools:text="App Name"/>
             <TextView
                 android:id="@+id/app_package"
-                android:text="App Package Name"
+                tools:text="App Package Name"
                 android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
