Ability to only show cleartext connections
Protocol search is now performed with exact match (e.g. HTTP does not
match HTTPS)

Fixes #228

--- a/app/src/main/res/layout/edit_filter_activity.xml
+++ b/app/src/main/res/layout/edit_filter_activity.xml
@@ -43,6 +43,13 @@
             android:layout_marginBottom="10dp"
             android:text="@string/show_only_malicious" />
 
+        <CheckBox
+            android:id="@+id/only_cleartext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="@string/show_only_cleartext" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
