Improve firewall temporary app unblock
- If temporary unblocked, menu will show option to block it again
- Add unblock for 10 min
- Add temporary unblock to the apps view
- Show hourglass in apps view if temporary unblocked

--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -32,6 +32,13 @@
         android:layout_width="wrap_content"
         android:layout_height="12sp" />
 
+    <ImageView
+        android:id="@+id/temp_unblocked"
+        android:src="@drawable/ic_hourglass_top"
+        android:layout_marginHorizontal="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="14sp" />
+
     <TextView
         android:layout_width="8sp"
         android:layout_height="fill_parent"
