--- a/app/src/main/res/menu/connection_context_menu.xml
+++ b/app/src/main/res/menu/connection_context_menu.xml
@@ -82,10 +82,10 @@
                         android:id="@+id/unblock_app_permanently"
                         android:title="@string/unblock_permanently" />
                     <item
-                        android:id="@+id/unblock_app_1h"
+                        android:id="@+id/unblock_app_10m"
                         android:title="" />
                     <item
-                        android:id="@+id/unblock_app_2h"
+                        android:id="@+id/unblock_app_1h"
                         android:title="" />
                     <item
                         android:id="@+id/unblock_app_8h"
