--- a/app/src/main/res/layout/logview_fragment.xml
+++ b/app/src/main/res/layout/logview_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,5 +9,8 @@
         android:id="@+id/log"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:textSize="13sp"
+        tools:text="[i] log..."
         android:textIsSelectable="true" />
 </ScrollView>
