Implement firewall whitelist mode
When whitelist mode is enabled, all the connections are blocked unless
an app is manually whitelisted. DNS resolution by netd is always allowed,
since it's not possible to determine the requesting app.

With this mode enabled, the firewall blocklist is still used and has
priority. For example, if an app is whitelisted but a block rule exists
for the given domain, the connection will be blocked.

The app provides a default whitelist with some essential services.

Closes #232

--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="?attr/selectableItemBackground"
     android:orientation="horizontal"
@@ -31,6 +32,14 @@
         android:layout_marginHorizontal="4dp"
         android:layout_width="wrap_content"
         android:layout_height="12sp" />
+
+    <ImageView
+        android:id="@+id/whitelisted"
+        android:src="@drawable/ic_check_solid"
+        app:tint="?attr/colorControlNormal"
+        android:layout_marginHorizontal="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="16sp" />
 
     <ImageView
         android:id="@+id/temp_unblocked"
