--- a/app/src/main/res/menu/app_context_menu.xml
+++ b/app/src/main/res/menu/app_context_menu.xml
@@ -6,6 +6,14 @@
     <item
         android:id="@+id/block_app"
         android:title="@string/action_block" />
+    <item
+        android:id="@+id/add_to_whitelist"
+        android:title="@string/add_to_whitelist"
+        android:visible="false" />
+    <item
+        android:id="@+id/remove_from_whitelist"
+        android:title="@string/remove_from_whitelist"
+        android:visible="false" />
 
     <item
         android:id="@+id/unblock_app_permanently"
