--- a/app/src/main/res/menu/list_edit_menu.xml
+++ b/app/src/main/res/menu/list_edit_menu.xml
@@ -11,11 +11,40 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:title="@string/add_action"
+        android:orderInCategory="15"
+        android:icon="@drawable/ic_add"
+        app:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:id="@+id/add_app"
+                android:title="@string/app"
+                android:visible="false" />
+            <item
+                android:id="@+id/add_host"
+                android:title="@string/host"
+                android:visible="false" />
+            <item
+                android:id="@+id/add_ip"
+                android:title="@string/ip_address"
+                android:visible="false" />
+            <item
+                android:id="@+id/add_proto"
+                android:title="@string/protocol"
+                android:visible="false" />
+            <item
+                android:id="@+id/add_country"
+                android:title="@string/country"
+                android:visible="false" />
+        </menu>
+    </item>
+
+    <item
         android:id="@+id/action_export"
         android:title="@string/export_action"
         android:orderInCategory="18"
         android:icon="@drawable/ic_file_export"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_import"
