--- a/app/src/main/res/menu/app_context_menu.xml
+++ b/app/src/main/res/menu/app_context_menu.xml
@@ -7,12 +7,13 @@
         android:id="@+id/block_app"
         android:title="@string/action_block" />
     <item
-        android:id="@+id/add_to_whitelist"
-        android:title="@string/add_to_whitelist"
+        android:id="@+id/add_to_fw_whitelist"
+        android:title="@string/add_to_fw_whitelist"
+        tools:visible="true"
         android:visible="false" />
     <item
-        android:id="@+id/remove_from_whitelist"
-        android:title="@string/remove_from_whitelist"
+        android:id="@+id/remove_from_fw_whitelist"
+        android:title="@string/remove_from_fw_whitelist"
         android:visible="false" />
 
     <item
